add Lightning imports back in

--- a/native/wasm-test/wasm_test.html
+++ b/native/wasm-test/wasm_test.html
@@ -28,6 +28,10 @@
 	run();
 	console.log(perform_complicated_calculation);
 
+
+	// import {perform_complicated_calculation} from '../bin/asm.js';
+	// console.log(perform_complicated_calculation());
+
 </script>
 
 </body>
